Format favorites list, fix dark mode styles

--- a/wwwroot/css/darkmode.css
+++ b/wwwroot/css/darkmode.css
@@ -54,3 +54,8 @@
     .dark-mode .form-select::placeholder {
         color: #999;
     }
+
+.dark-mode .list-group-item {
+    background-color: #333539;
+    color: #e0e0e0;
+}
